WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171364
Web Inspector: Uint8ClampedArray should be treated like an array, not an object
https://bugs.webkit.org/show_bug.cgi?id=171364
Summary
Web Inspector: Uint8ClampedArray should be treated like an array, not an object
Joseph Pecoraro
Reported
2017-04-26 20:17:40 PDT
Summary: Uint8ClampedArray should be treated like an array, not an object Steps to Reproduce: 1. js> Uint8ClampedArray(20000) 2. Expand => hang Notes: - We paginate large arrays.
Attachments
[PATCH] Proposed Fix
(7.86 KB, patch)
2017-04-26 20:20 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
[PATCH] Proposed Fix
(7.86 KB, patch)
2017-04-26 20:23 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2017-04-26 20:17:47 PDT
<
rdar://problem/10873037
>
Joseph Pecoraro
Comment 2
2017-04-26 20:20:39 PDT
Created
attachment 308328
[details]
[PATCH] Proposed Fix
Joseph Pecoraro
Comment 3
2017-04-26 20:23:49 PDT
Created
attachment 308329
[details]
[PATCH] Proposed Fix Nicer order.
WebKit Commit Bot
Comment 4
2017-04-26 22:13:07 PDT
Comment on
attachment 308329
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 308329 Committed
r215855
: <
http://trac.webkit.org/changeset/215855
>
WebKit Commit Bot
Comment 5
2017-04-26 22:13:19 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug