Web Inspector: Uint8ClampedArray should be treated like an array, not an object https://bugs.webkit.org/show_bug.cgi?id=171364 <rdar://problem/10873037>

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2017-04-26
Reviewed by Sam Weinig.

Source/JavaScriptCore:

* inspector/JSInjectedScriptHost.cpp:
(Inspector::JSInjectedScriptHost::subtype):
Treat Uint8ClampedArray (like other Typed Arrays) as an array.

LayoutTests:

* inspector/model/remote-object-expected.txt:
* inspector/model/remote-object.html:
* platform/mac/inspector/model/remote-object-expected.txt:
Test a Uint8ClampedArray is treated like an array.

Canonical link: https://commits.webkit.org/188251@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215855 268f45cc-cd09-0410-ab3c-d52691b4dbfc